# NLP_fairness_project

./: .gitignore  Ma_partie_pour_le_projet.txt  README_baseline_v2.md  To_do.md  exemple_mlp_fairness_calculs.md  fairness.ipynb  fairness_baseline_finale.ipynb  fairness_baseline_v2.ipynb  fairness_vf.ipynb  fairness_vf_old.ipynb  mc_dropout_exemple_numerique.md  mlflow.db  pyproject.toml
Robustesse/: fairness_vf.ipynb
Robustesse/embeddings/: test_labels.npy  val_emb_D1.npy  val_emb_dmis-lab_biobert-base-cased-v1.2.npy  val_emb_microsoft_BiomedNLP-BiomedBERT-base-uncased-abstract.npy
documentation/: groupe_benchmark_comparison.md  presentation_biais_NLP_medical.pptx  uncertainty_x_fairness_analysis.md
embeddings/: test_embeddings.npy  train_labels.npy  val_emb_D0.npy  val_emb_D1n.npy  val_emb_allenai_biomed_roberta_base.npy  val_emb_emilyalsentzer_Bio_ClinicalBERT.npy  val_emb_sultan_BioM-ELECTRA-Large-SQuAD2.npy  val_embeddings.npy  val_labels.npy
experiments/: 01_baseline_performance.ipynb  02_bias_detection.ipynb  03_embedding_models_comparison.ipynb  04_rf_hyperparameter_tuning.ipynb  05_classifier_comparison.ipynb  06_feature_importance_analysis.ipynb  07_prediction_distribution_analysis.ipynb  08_comprehensive_fairness_metrics.ipynb  09_preprocessing_mitigation.ipynb  10_inprocessing_fairness.ipynb  11_postprocessing_fairness.ipynb  12_comparative_analysis.ipynb  13_robustness_testing.ipynb  14_final_report.ipynb
experiments/embedding_cache/: bert-base-uncased_1000.npy  (+4 more)
medical_bios_data/: test_rationales.jsonl
utils/: fairness_metrics.py
(+31 files in other folders)
