[project]
name = "medical-DATA-708"
version = "0.1.0"
description = "Kit d'expérimentation pour l'analyse de biais dans les données médicales"
authors = [{name = "Antoine Dalle", email = "antoine.dalle59@gmail.com"}]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0", 
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "datasets>=2.14.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
    "plotly>=5.15.0",
    "scipy>=1.11.0",
    "mlflow>=2.7.0",
    "transformers>=4.21.0",
    "torch>=2.0.0",
    "requests>=2.28.0",
    "tqdm>=4.65.0"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"